--- a/main.css
+++ b/main.css
@@ -12,14 +12,11 @@ body {
 /* Style for the container */
 .container {
     text-align: center;
-    padding: 2rem;
-    ;
 }
 
 /* Heading style */
-
 h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     color: #333333;
     margin-bottom: 1rem;
 }
@@ -45,8 +42,8 @@ input[type="email"] {
 button {
     padding: 0.7rem 1.5rem;
     border: none;
-    background: #FEB198ff;
-    color: ##FEB198ff;
+    background: #F68F86;
+    color: #ffffff;
     font-size: 1rem;
     border-radius: 5px;
     cursor: pointer;
@@ -54,5 +51,5 @@ button {
 }
 
 button:hover {
-    background: #0056b3;
+    background: #9D7498;
 }
